web css/html validated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
         <!-- Google Fonts: Merriweather -->
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700&display=swap" rel="stylesheet">
     </head>
-    <body lang="en">
+    <body>
 
         <header>
 
@@ -34,7 +34,7 @@
             <!-- border styling -->
             <div class="b-double"></div> 
 
-            <form action="" method="post">
+            <form action="index.html" method="post">
 
                 <fieldset id="contact">
                    
